# django-prometheus

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  end2endtest.py  pep8  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini  update_version_from_git.py
.github/.github/workflows/: package.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
django-mixin/: mixin.libsonnet
django-mixin/dashboards/: django-overview.json
django_prometheus/: __init__.py  apps.py  celery.py  exports.py  management.py  middleware.py  migrations.py  models.py  testutils.py  urls.py  utils.py
django_prometheus/cache/: metrics.py
django_prometheus/cache/backends/: django_memcached_consul.py  filebased.py  locmem.py  memcached.py  redis.py  redis2.py
django_prometheus/conf/: __init__.py
django_prometheus/db/: __init__.py  common.py  metrics.py
django_prometheus/db/backends/: README.md  common.py
django_prometheus/db/backends/mysql/: base.py
django_prometheus/db/backends/postgis/: base.py
django_prometheus/db/backends/postgresql/: base.py
django_prometheus/db/backends/spatialite/: base.py
django_prometheus/db/backends/sqlite3/: base.py
django_prometheus/tests/: test_django_prometheus.py  test_exports.py  test_testutils.py
django_prometheus/tests/end2end/testapp/: helpers.py  models.py  settings.py  test_authorization.py  test_caches.py  test_command.py  test_db.py  test_middleware.py  test_middleware_custom_labels.py  test_migrations.py  test_models.py  urls.py  views.py  wsgi.py
django_prometheus/tests/end2end/testapp/management/commands/: pushgateway_job.py
django_prometheus/tests/end2end/testapp/templates/: help.html  slow.html  sql.html
documentation/: exports.md
examples/prometheus/: README.md  django.rules  prometheus.conf  prometheus.yml
examples/prometheus/consoles/: django.html
tests/: test_django_prometheus.py  test_exports.py
tests/end2end/testapp/: settings.py  test_db.py  test_middleware.py  test_migrations.py  test_models.py  urls.py  views.py  wsgi.py
tests/end2end/testapp/templates/: index.html  lawn.html  sql.html
