[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = " --ignore django_prometheus/tests/end2end"

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
include_trailing_comma = true


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = {py36,py37,py38,py39,py310}-django{220,300,310,320}-{end2end,unittests},{py38,py39,py310}-django-400-{end2end,unittests},py38-lint

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38, py38-lint
    3.9: py39
    3.10: py310

[testenv]
deps =
    django220: Django>=2.2,<2.3
    django300: Django>=3.0,<3.1
    django310: Django>=3.1,<3.2
    django320: Django>=3.2,<3.3
    django4: Django==4.0
    coverage
    -rrequirements.txt
skip_missing_interpreters=true

changedir =
    end2end: {toxinidir}/django_prometheus/tests/end2end
setenv =
    end2end: PYTHONPATH = {toxinidir}
    end2end: DJANGO_SETTINGS_MODULE=testapp.settings
commands =
    end2end: coverage run --source=django_prometheus -m pytest testapp/
    unittests: coverage run --source=django_prometheus setup.py test
    unittests: python setup.py sdist bdist_wheel

[testenv:py38-lint]
deps =
    black
    flake8
    isort>=5.5.4,<6
    flake8-debugger
    flake8-2020
    flake8-comprehensions
    flake8-bugbear
commands =
    black --check django_prometheus/
    flake8 django_prometheus
    isort --check-only django_prometheus/

"""
