[build-system]
requires = ["setuptools >= 67.7.2, < 72.0.0", "wheel >= 0.40.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = " --ignore django_prometheus/tests/end2end"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "T10", "YTT", "W"]

