[metadata]
name = django-prometheus
version = attr: django_prometheus.__version__
author = Uriel Corfa
author_email = uriel@corfa.fr
license = Apache
description = Django middlewares to monitor your application with Prometheus.io.
keywords = django, monitoring, prometheus
url = http://github.com/korfuri/django-prometheus
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Topic :: System :: Monitoring
    License :: OSI Approved :: Apache Software License
project_urls =
    Changelog = https://github.com/korfuri/django-prometheus/blob/master/CHANGELOG.md
    Documentation = https://github.com/korfuri/django-prometheus/blob/master/README.md
    Source = https://github.com/korfuri/django-prometheus
    Tracker = https://github.com/korfuri/django-prometheus/issues

[options]
packages = find:
setup_requires = pytest-runner
install_requires = prometheus-client>=0.7
test_suite = django_prometheus.tests
tests_require = pytest; pytest-django

[options.packages.find]
exclude = tests

[aliases]
test=pytest

[pycodestyle]
max-line-length = 110

[flake8]
ignore = E501,W503
